objects/CSS_WS_Rescue_Parts__c.object
<CustomObject>
    <description>Parts used on a Rescue Service</description>
    <fields>
        <fullName>CSS_WS_Description__c</fullName>
        <description>Part Description</description>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Part_ID__c</fullName>
        <description>Part_ID according catalog</description>
        <label>Part ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_Emite__c</fullName>
        <formula>Precio_Unitario_Emite__c *  CSS_WS_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Emite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_Recibe__c</fullName>
        <formula>Precio_Unitario_Recibe__c *  CSS_WS_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Recibe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_Unitario_Emite__c</fullName>
        <label>Precio Unitario Emite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_Unitario_Recibe__c</fullName>
        <label>Precio Unitario Recibe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rescue_Id__c</fullName>
        <description>Rescue Id which part belongs to</description>
        <label>Rescue</label>
        <referenceTo>CSS_WS_Rescue__c</referenceTo>
        <relationshipName>Rescue_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CSS WS Rescue Part</label>
    <nameField>
        <label>SF Part ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS Rescue Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>